crates/sniff-test/tests/snapshots/fixtures__closure_call_graph.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: "report[\"findings\"]"
---
[
  {
    "kind": "panic-invocation",
    "level": "deny",
    "owner": {
      "crate": "closure_call_graph",
      "package-name": "closure-call-graph",
      "package-version": "0.1.0",
      "scope": "workspace"
    },
    "reason": "panic invocation to `core::panicking::panic_fmt` has no recorded `// PANIC:` evidence",
    "root": "closure_call_graph::basic_closure_panics",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:1:1: 1:30",
    "source-evidence": {
      "status": "verified-absent"
    },
    "span": "src/lib.rs:2:20: 2:44",
    "target": "core::panicking::panic_fmt",
    "trace": [
      "src/lib.rs:3:5: 3:20: closure_call_graph::basic_closure_panics --direct-call-> closure_call_graph::calls_fn",
      "src/lib.rs:12:5: 12:15: closure_call_graph::calls_fn --direct-call-> closure_call_graph::basic_closure_panics::{closure#0}",
      "src/lib.rs:2:20: 2:44: closure_call_graph::basic_closure_panics::{closure#0} --macro-expansion-> macro std::macros::panic",
      "src/lib.rs:2:20: 2:44: macro std::macros::panic --macro-expansion-> macro core::panic::panic_2021",
      "[SYSROOT]/lib/rustlib/src/rust/library/core/src/panic.rs:62:9: 62:73: macro core::panic::panic_2021 --direct-call-> core::panicking::panic_fmt"
    ]
  }
]
