crates/sniff-test/tests/snapshots/fixtures__contract_overrides.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: "report[\"findings\"]"
---
[
  {
    "kind": "documented-panic",
    "level": "warn",
    "missing-requirements": [
      "flag: flag must be true."
    ],
    "owner": {
      "crate": "contract_overrides",
      "package-name": "contract-overrides",
      "package-version": "0.1.0",
      "scope": "workspace"
    },
    "reason": "call to `contract_overrides::panic_contract` with a `# Panics` obligation has no recorded `// PANIC:` justification",
    "requirements": [
      "flag: flag must be true."
    ],
    "root": "contract_overrides::panic_override_missing_marker",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:7:1: 7:49",
    "source-evidence": {
      "status": "verified-absent"
    },
    "span": "src/lib.rs:8:5: 8:25",
    "target": "contract_overrides::panic_contract",
    "trace": [
      "src/lib.rs:8:5: 8:25: contract_overrides::panic_override_missing_marker --direct-call-> contract_overrides::panic_contract"
    ]
  },
  {
    "function": "contract_overrides::safety_override_missing_requirement",
    "kind": "unsafe-call-missing-requirements",
    "level": "warn",
    "missing-requirements": [
      "initialized: pointer must reference initialized memory."
    ],
    "owner": {
      "crate": "contract_overrides",
      "package-name": "contract-overrides",
      "package-version": "0.1.0",
      "scope": "workspace"
    },
    "reason": "recorded `// SAFETY:` justification for unsafe call to `contract_overrides::synthetic_read` does not satisfy the remaining `# Safety` requirements",
    "requirements": [
      "valid_ptr: pointer must be non-null.",
      "initialized: pointer must reference initialized memory."
    ],
    "root": "contract_overrides::safety_override_missing_requirement",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:18:1: 18:51",
    "source-evidence": {
      "status": "present"
    },
    "span": "src/lib.rs:24:14: 24:42",
    "target": "contract_overrides::synthetic_read",
    "trace": [
      "src/lib.rs:24:14: 24:42: contract_overrides::safety_override_missing_requirement --direct-call-> contract_overrides::synthetic_read"
    ]
  }
]
