crates/sniff-test/tests/snapshots/fixtures__converging_effect_paths.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: messages
---
[
  {
    "artifact": {
      "artifact-id": "[ARTIFACT_ID]",
      "crate-name": "converging_effect_paths"
    },
    "dependencies": [],
    "findings": [
      {
        "kind": "panic-invocation",
        "level": "deny",
        "reason": "panic sink core::std::rt::panic_fmt",
        "root": "converging_effect_paths::converging_panic_paths",
        "root-kind": "concrete",
        "span": "src/lib.rs:2:5: 2:19",
        "target": "core::std::rt::panic_fmt",
        "trace": [
          "src/lib.rs:12:5: 12:23: converging_effect_paths::converging_panic_paths --direct-call-> converging_effect_paths::raw_panic_branch",
          "src/lib.rs:6:5: 6:19: converging_effect_paths::raw_panic_branch --direct-call-> converging_effect_paths::panic_effect",
          "src/lib.rs:2:5: 2:19: converging_effect_paths::panic_effect --macro-expansion-> macro std::panic",
          "src/lib.rs:2:5: 2:19: macro std::panic --macro-expansion-> macro core::std::panic::panic_2021",
          "[SYSROOT]/lib/rustlib/src/rust/library/core/src/panic.rs:62:9: 62:73: macro core::std::panic::panic_2021 --direct-call-> core::std::rt::panic_fmt"
        ]
      },
      {
        "function": "converging_effect_paths::safety_effect",
        "kind": "unsafe-op-missing-justification",
        "level": "deny",
        "reason": "unsafe operation (raw pointer dereference) has no `// SAFETY:` justification",
        "root": "converging_effect_paths::converging_safety_paths",
        "root-kind": "concrete",
        "safety-op-kind": "raw-pointer-dereference",
        "span": "src/lib.rs:16:14: 16:22",
        "trace": [
          "src/lib.rs:26:14: 26:40: converging_effect_paths::converging_safety_paths --direct-call-> converging_effect_paths::raw_safety_branch",
          "src/lib.rs:20:5: 20:27: converging_effect_paths::raw_safety_branch --direct-call-> converging_effect_paths::safety_effect",
          "src/lib.rs:16:14: 16:22: converging_effect_paths::safety_effect --unsafe-operation-> unsafe operation (raw pointer dereference)"
        ]
      }
    ],
    "format-version": 11,
    "reason": "sniff-test-artifact",
    "rustc-version": "[RUSTC_VERSION]",
    "tool-version": "0.1.0"
  }
]
