crates/sniff-test/tests/snapshots/fixtures__custom_index_impl.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: "report[\"findings\"]"
---
[
  {
    "kind": "documented-panic",
    "level": "warn",
    "owner": {
      "crate": "custom_index_impl",
      "package-name": "custom-index-impl",
      "package-version": "0.1.0",
      "scope": "workspace"
    },
    "reason": "call to `<custom_index_impl::Foo as core::ops::index::Index<usize>>::index` with a `# Panics` contract has no recorded `// PANIC:` evidence",
    "root": "custom_index_impl::custom_index_panics",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:3:1: 3:29",
    "source-evidence": {
      "status": "verified-absent"
    },
    "span": "src/lib.rs:5:16: 5:20",
    "target": "<custom_index_impl::Foo as core::ops::index::Index<usize>>::index",
    "trace": [
      "src/lib.rs:5:16: 5:20: custom_index_impl::custom_index_panics --direct-call-> <custom_index_impl::Foo as core::ops::index::Index<usize>>::index"
    ]
  }
]
