crates/sniff-test/tests/snapshots/fixtures__dependency_async_panic.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: messages
---
[
  {
    "artifact": {
      "artifact-id": "[ARTIFACT_ID]",
      "crate-name": "dependency_async_panic_app"
    },
    "dependencies": [
      {
        "artifact-id": "[ARTIFACT_ID]",
        "extern-name": "dependency_async_panic"
      }
    ],
    "findings": [
      {
        "kind": "panic-invocation",
        "level": "deny",
        "reason": "panic sink core::std::rt::panic_fmt",
        "root": "dependency_async_panic_app::workspace_async_root",
        "root-kind": "concrete",
        "span": "[FIXTURE]/dep/src/lib.rs:6:5: 6:61",
        "target": "core::std::rt::panic_fmt",
        "trace": [
          "src/lib.rs:1:37: 3:2: dependency_async_panic_app::workspace_async_root --coroutine-body-> dependency_async_panic_app::workspace_async_root::{closure#0}",
          "src/lib.rs:2:5: 2:55: dependency_async_panic_app::workspace_async_root::{closure#0} --direct-call-> dependency_async_panic::dependency_async_api",
          "[FIXTURE]/dep/src/lib.rs:1:49: 3:2: dependency_async_panic::dependency_async_api --coroutine-body-> dependency_async_panic::dependency_async_api::{closure#0}",
          "[FIXTURE]/dep/src/lib.rs:2:5: 2:27: dependency_async_panic::dependency_async_api::{closure#0} --direct-call-> dependency_async_panic::private_async_helper",
          "[FIXTURE]/dep/src/lib.rs:5:33: 7:2: dependency_async_panic::private_async_helper --coroutine-body-> dependency_async_panic::private_async_helper::{closure#0}",
          "[FIXTURE]/dep/src/lib.rs:6:5: 6:61: dependency_async_panic::private_async_helper::{closure#0} --macro-expansion-> macro std::panic",
          "[FIXTURE]/dep/src/lib.rs:6:5: 6:61: macro std::panic --macro-expansion-> macro core::std::panic::panic_2021",
          "[SYSROOT]/lib/rustlib/src/rust/library/core/src/panic.rs:62:9: 62:73: macro core::std::panic::panic_2021 --direct-call-> core::std::rt::panic_fmt"
        ]
      }
    ],
    "format-version": 11,
    "reason": "sniff-test-artifact",
    "rustc-version": "[RUSTC_VERSION]",
    "tool-version": "0.1.0"
  }
]
