crates/sniff-test/tests/snapshots/fixtures__dependency_generic_dispatch.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: "report[\"findings\"]"
---
[
  {
    "effect": "panic",
    "finding": "concrete-invocation",
    "function": "<dependency_generic_local_impl_app::Local as dependency_generic_local_impl::Action>::apply",
    "kind": "effect",
    "level": "deny",
    "operation": "configured-invocation",
    "owner": {
      "crate": "dependency_generic_local_impl_app",
      "scope": "workspace"
    },
    "reason": "panic invocation to `core::panicking::panic_fmt` has no recorded `// PANIC:` justification",
    "root": "dependency_generic_local_impl_app::caller",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:11:1: 11:26",
    "source-evidence": {
      "status": "verified-absent"
    },
    "span": "src/lib.rs:7:9: 7:70",
    "target": "core::panicking::panic_fmt",
    "trace": [
      "src/lib.rs:12:5: 12:57: dependency_generic_local_impl_app::caller --direct-call-> dependency_generic_local_impl::invoke",
      "[FIXTURE]/dep/src/lib.rs:7:5: 7:19: dependency_generic_local_impl::invoke --direct-call-> <dependency_generic_local_impl_app::Local as dependency_generic_local_impl::Action>::apply",
      "src/lib.rs:7:9: 7:70: <dependency_generic_local_impl_app::Local as dependency_generic_local_impl::Action>::apply --macro-expansion-> macro core::macros::builtin::assert",
      "src/lib.rs:7:9: 7:70: macro core::macros::builtin::assert --macro-expansion-> macro core::panic::panic_2021",
      "[SYSROOT]/lib/rustlib/src/rust/library/core/src/panic.rs:62:9: 62:73: macro core::panic::panic_2021 --direct-call-> core::panicking::panic_fmt"
    ],
    "trace-id": "31589383"
  }
]
